[gd_scene load_steps=9 format=3 uid="uid://bd7r68v58k3k0"]

[ext_resource type="Script" path="res://scripts/Creatures/player.gd" id="1_o62gg"]
[ext_resource type="PackedScene" uid="uid://du8jhd8o1yf0" path="res://nonLevelScenes/AttacksAndConsumable/bullet_fire.tscn" id="2_v1nyt"]
[ext_resource type="Texture2D" uid="uid://df4jwxgsqf8y2" path="res://pictureAssets/icon.svg" id="3_gbm6x"]
[ext_resource type="PackedScene" uid="uid://b24paa0okycn8" path="res://playercollision.tscn" id="4_gtshc"]
[ext_resource type="Script" path="res://nonLevelScenes/Creatures/MeleeBody.gd" id="5_62u3c"]
[ext_resource type="Texture2D" uid="uid://b8okmd5hmav8c" path="res://pictureAssets/SWORD-export.png" id="6_ivo2w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evm8g"]
size = Vector2(74, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cnje6"]
size = Vector2(122, 80)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_o62gg")
projectile = ExtResource("2_v1nyt")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -68)
scale = Vector2(0.570312, 1)
texture = ExtResource("3_gbm6x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -68)
shape = SubResource("RectangleShape2D_evm8g")

[node name="hpbar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -993.0
offset_top = -450.0
offset_right = -913.0
offset_bottom = -3.0
max_value = 10.0
step = 1.0
value = 10.0

[node name="playercollision" parent="." instance=ExtResource("4_gtshc")]
position = Vector2(45, -51)

[node name="bullet_pos_right" type="Marker2D" parent="."]
position = Vector2(140, -100)

[node name="MeleeAttack" type="Area2D" parent="."]
script = ExtResource("5_62u3c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeAttack"]
visible = false
position = Vector2(98, -60)
shape = SubResource("RectangleShape2D_cnje6")
disabled = true

[node name="SwordSprite" type="Sprite2D" parent="MeleeAttack"]
visible = false
position = Vector2(90, -63)
rotation = 0.791306
scale = Vector2(0.554688, 0.554688)
texture = ExtResource("6_ivo2w")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -237)
zoom = Vector2(0.75, 0.75)

[connection signal="body_entered" from="playercollision" to="." method="_on_playercollision_body_entered"]
[connection signal="body_entered" from="MeleeAttack" to="MeleeAttack" method="_on_body_entered"]
